[UPDATE/ADD] Добавил функцию fixed для контейнера, аналог (стиля position:fixed))

--- a/app/templates/pages/catalog.pug
+++ b/app/templates/pages/catalog.pug
@@ -39,7 +39,8 @@ block content
             +icon('print-product', 'svg')
             img(src="./images/img-product-4.png", alt="")
           .catalog-el-text Cыворотка
-      .main-catalog-fixed.waveSection-bottom(data-color="#f6f5f3")
+      .fixed-window
+        .main-catalog-fixed.waveSection-bottom(data-color="#f6f5f3")
           .text-bottom Продукция
           canvas.main-catalog-dashed(width="100%", height="100%")
     +subscriptionForm().bg-white
