--- a/app/scss/modules/animations.scss
+++ b/app/scss/modules/animations.scss
@@ -84,3 +84,13 @@ body[data-scrollbar="true"]{
     }
   }
 }
+
+.fixed-window{
+  position: fixed;
+  left: 0;
+  margin-left: 20px;
+  background-color: inherit;
+  margin-top: 20px;
+  width: calc(100vw - 40px);
+  height: calc(100vh - 20px);
+}
