--- a/app/scss/modules/footer.scss
+++ b/app/scss/modules/footer.scss
@@ -22,6 +22,10 @@ footer {
     justify-content: space-between;
     grid-row-gap: 50px;
     grid-column-gap: 50px;
+
+    @include screen('xs', 'max') {
+      grid-row-gap: 18px;
+    }
   }
 
   &-nav {
@@ -50,12 +54,21 @@ footer {
           a {
             font-size: 34px;
             color: $color-text-main;
+
+            @include screen('xs', 'max') {
+              font-size: 20px;
+              line-height: 25px;
+            }
           }
 
           &-desc {
             color: $color-text-complementary;
             font-size: 14px;
             margin-top: 5px;
+
+            @include screen('xs', 'max') {
+              font-size: 12px;
+            }
           }
         }
       }
@@ -69,6 +82,11 @@ footer {
           color: $color-text-main;
           font-size: 18px;
           transition: 0.2s;
+
+          @include screen('xs', 'max') {
+            font-size: 14px;
+            line-height: 35px;
+          }
 
           &:hover {
             color: #EE7754;
@@ -91,22 +109,57 @@ footer {
         grid-row: 2 / 3;
       }
 
+      @include screen('xs', 'max') {
+        grid-column: 1 / 4;
+        display: grid;
+      }
+
       display: flex;
       flex-direction: column;
       max-width: 312px;
 
       &-group {
         margin-bottom: 44px;
+
+        @include screen('xs', 'max') {
+          margin-bottom: 30px;
+
+          &:first-child {
+            grid-column: 1 / 5;
+          }
+
+          &:nth-child(2n) {
+            grid-column: 1 / 3;
+            max-width: 95%;
+            margin-right: 15px;
+          }
+
+          &:last-child {
+            grid-column: 3 / 5;
+          }
+        }
+
         &-name {
           font-size: 14px;
           color: $color-text-complementary;
           margin-bottom: 8px;
+
+          @include screen('xs', 'max') {
+            font-size: 12px;
+            line-height: 26px;
+            margin-bottom: 4px;
+          }
         }
 
         &-desc {
           font-size: 16px;
           line-height: 26px;
           color: $color-text-main;
+
+          @include screen('xs', 'max') {
+            font-size: 13px;
+            line-height: 140%;
+          }
         }
       }
     }
@@ -124,13 +177,27 @@ footer {
         grid-row: 3 / 4;
       }
 
+      @include screen('xs', 'max') {
+        margin-bottom: 36px;
+      }
+
       &-group {
         color: $color-text-main;
         margin-bottom: 25px;
 
+        @include screen('xs', 'max') {
+          margin-bottom: 20px;
+        }
+
         &-desc {
           font-size: 16px;
           margin-bottom: 8px;
+
+          @include screen('xs', 'max') {
+            font-size: 12px;
+            line-height: 26px;
+            margin-bottom: 5px;
+          }
         }
 
         &-number {
@@ -160,6 +227,12 @@ footer {
       a {
         margin-bottom: 10px;
         transition: 0.3s;
+
+        @include screen('xs', 'max') {
+          font-size: 10px;
+          line-height: 26px;
+          margin-bottom: 0px;
+        }
         &:hover {
           color: #ee7754;
         }
@@ -179,9 +252,20 @@ footer {
 
       &-title {
         margin-bottom: 30px;
+
+        @include screen('xs', 'max') {
+          margin-bottom: 17px;
+          font-size: 12px;
+          line-height: 26px;
+        }
       }
 
       &-group {
+        @include screen('xs', 'max') {
+          display: flex;
+          width: 100%;
+          justify-content: space-between; 
+        }
         &-link {
           margin-right: 37px;
           position: relative;
@@ -212,6 +296,11 @@ footer {
     &-worked {
       grid-column: 3 / 4;
 
+      @include screen('xs', 'max') {
+        font-size: 10px;
+        line-height: 26px;
+      }
+
       a {
         color: #ee7754;
       }
@@ -231,6 +320,11 @@ footer {
       
       @include screen('md', 'max') {
         grid-column: 1 / 4;
+      }
+
+      @include screen('xs', 'max') {
+        font-size: 10px;
+        line-height: 26px;
       }
     }
   }
