--- a/app/templates/layouts/default.pug
+++ b/app/templates/layouts/default.pug
@@ -22,7 +22,7 @@ html(lang="ru")
         .container.visual-animation-base-block-m
             block content
             include ../modules/footer
-        .modal
+        .modal.fixed-window
             .modal-content
                 a#controlModal
                     span
