--- a/app/scss/components/recepts/detail.scss
+++ b/app/scss/components/recepts/detail.scss
@@ -40,6 +40,11 @@
           width: 80%;
           margin-bottom: 120px;
         }
+
+        @include screen('xs', 'max') {
+          width: 100%;
+          margin-bottom: 30px;
+        }
         
         .group-product {
           height: 100%;
@@ -77,6 +82,7 @@
             width: 100%;
             height: 100%;
             background-size: contain;
+            background-position: top;
           }
         }
       }
@@ -86,6 +92,10 @@
         position: relative;
         width: 70%;
         margin: 0 auto;
+
+        @include screen('xs', 'max') {
+          width: 80%;
+        }
 
         img {
           position: relative;
@@ -301,6 +311,10 @@
         justify-content: space-between;
         padding: 20px;
         z-index: 10;
+        
+        @include screen('xs', 'max') {
+          padding: 0px;
+        }
       }
     }
 
@@ -321,6 +335,11 @@
         position: relative;
         cursor: pointer;
 
+        @include screen('xs', 'max') {
+          width: 50px;
+          height: 50px;
+        }
+
         &.swiper-slide-thumb-active {
           border: 1px dashed #EE7754;
         }
@@ -336,6 +355,10 @@
           display: block;
           content: "";
           border-radius: 50px;
+
+          @include screen('xs', 'max') {
+            box-shadow: inset 0 0 0 3px #f6f5f3;
+          }
         }
       }
 
