--- a/app/scss/modules/recepts.scss
+++ b/app/scss/modules/recepts.scss
@@ -139,6 +139,10 @@
         transition: transform 0.3s;
         cursor: pointer;
 
+        @include screen('xs', 'max') {
+          height: 370px;
+        }
+
         @include screen('md', 'min') {
           &:nth-child(even) {
             top: 40px;
