--- a/app/scss/components/elements/elements.scss
+++ b/app/scss/components/elements/elements.scss
@@ -26,8 +26,8 @@
   transform-style: flat;
 
   > * > .animate {
-    -webkit-animation: notransform 500ms;
-    animation: notransform 500ms;
+    -webkit-animation: notransform 1100ms cubic-bezier(0, 0, 0, 1);
+    animation: notransform 1100ms cubic-bezier(0, 0, 0, 1);
     opacity: 1.0;
     animation-fill-mode: forwards;
     display: inline-block;
@@ -70,12 +70,12 @@
   > * {
     opacity: 1.0;
     -webkit-animation: notransform 1s;
-    animation: notransform 1s;
+    animation: notransform 1100ms cubic-bezier(0, 0, 0, 1);
     animation-fill-mode: forwards;
     &.header-box-nav{
       opacity: 1.0;
-      -webkit-animation: notransformHeaderMenu 1s;
-      animation: notransformHeaderMenu 1s;
+      -webkit-animation: notransformHeaderMenu 1100ms  cubic-bezier(0, 0, 0, 1);
+      animation: notransformHeaderMenu 1100ms  cubic-bezier(0, 0, 0, 1);
       animation-fill-mode: forwards;
     }
   }
