--- a/app/scss/components/elements/elements.scss
+++ b/app/scss/components/elements/elements.scss
@@ -58,6 +58,11 @@
     -webkit-transform: translate(0px, 100px);
     -ms-transform: translate(0px, 100px);
     transform: translate(0px, 100px);
+    &.header-box{
+      opacity: 1 !important;
+      transform: none !important;
+      animation: none;
+    }
     &.header-box-nav{
       -webkit-transform: translate(0px, -50%);
       -ms-transform: translate(0px, -50%);
@@ -69,9 +74,15 @@
 .visual-animation-showing-block, .visual-animation-showing-block-s, .visual-animation-showing-block-m {
   > * {
     opacity: 1.0;
-    -webkit-animation: notransform 1s;
+    -webkit-animation: notransform 1100ms cubic-bezier(0, 0, 0, 1);
     animation: notransform 1100ms cubic-bezier(0, 0, 0, 1);
     animation-fill-mode: forwards;
+    &.header-box{
+      opacity: 1 !important;
+      transform: none !important;
+      -webkit-animation: none;
+      animation: none;
+    }
     &.header-box-nav{
       opacity: 1.0;
       -webkit-animation: notransformHeaderMenu 1100ms  cubic-bezier(0, 0, 0, 1);
@@ -79,6 +90,10 @@
       animation-fill-mode: forwards;
     }
   }
+}
+
+.product-title > .visual-animation-showing > * > .animate{
+  animation-delay: 1000ms;
 }
 
 .visual-animation-base, .visual-animation-base-s, .visual-animation-base-m {
@@ -166,13 +181,13 @@
   position: absolute;
   left: 0;
   top: 0;
-  transition: opacity 500ms ease 0s;
+  transition: opacity 1000ms ease 0s;
   z-index: 4;
 }
 
 .image-background-hidden {
   opacity: 0.0 !important;
-  transition: opacity 500ms ease 0s;
+  transition: opacity 1000ms ease 0s;
   z-index: -1;
 }
 
@@ -293,9 +308,14 @@ canvas.how-do-dashed-bg4 {
 
   &.closed {
     left: -100%;
+    .img-back{
+      opacity: 0.0;
+    }
   }
 
   .img-back {
+    transition: opacity 500ms ease-in 0s;
+    opacity: 1.0;
     position: absolute;
     width: 250px;
     height: 150px;
