--- a/app/scss/components/products/catalog.scss
+++ b/app/scss/components/products/catalog.scss
@@ -361,9 +361,9 @@
         }
 
         @include screen('lg', 'max') {
-          opacity: 1.0 !important;
-          display: block;
-          position: relative;
+          opacity: 1.0;
+          display: none;
+          position: absolute;
           left: 0;
           top: 0;
           transition: opacity 500ms ease 0s;
