fix with rotate burger

--- a/app/scss/modules/header.scss
+++ b/app/scss/modules/header.scss
@@ -380,7 +380,7 @@
         position: relative;
 
         i.svg-icon.svg-navigation {
-          animation: rotating 8s linear infinite;
+           // animation: rotating 8s linear infinite;
         }
       }
   
