--- a/app/templates/pages/catalog.pug
+++ b/app/templates/pages/catalog.pug
@@ -17,6 +17,8 @@ block content
             +icon('rhombus', 'svg')
             +icon('print-product', 'svg')
             img(src="./images/img-product-1.png", alt="")
+            .catalog-el-mask
+              .catalog-el-text Адыгейские сыры
           .catalog-el-text Адыгейские сыры
         a.catalog-el(href="./catalog-products.html")
           .catalog-el-img.two-card
