--- a/app/templates/pages/catalog.pug
+++ b/app/templates/pages/catalog.pug
@@ -26,6 +26,8 @@ block content
             +icon('rhombus', 'svg')
             +icon('print-product', 'svg')
             img(src="./images/img-product-2.png", alt="")
+            .catalog-el-mask
+              .catalog-el-text Вытяжные сыры
           .catalog-el-text Вытяжные сыры
         a.catalog-el(href="./catalog-products.html")
           .catalog-el-img.third-card
@@ -33,6 +35,8 @@ block content
             +icon('rhombus', 'svg')
             +icon('print-product', 'svg')
             img(src="./images/img-product-3.png", alt="")
+            .catalog-el-mask
+              .catalog-el-text Масло и спред
           .catalog-el-text Масло и спред
         a.catalog-el(href="./catalog-products.html")
           .catalog-el-img.four-card
@@ -40,6 +44,8 @@ block content
             +icon('rhombus', 'svg')
             +icon('print-product', 'svg')
             img(src="./images/img-product-4.png", alt="")
+            .catalog-el-mask
+              .catalog-el-text Cыворотка
           .catalog-el-text Cыворотка
       .fixed-window
         .main-catalog-fixed.waveSection-bottom(data-color="#f6f5f3")
