--- a/app/scss/components/elements/elements.scss
+++ b/app/scss/components/elements/elements.scss
@@ -176,7 +176,8 @@
   left: 0;
   top: 0;
   transition: opacity 1000ms ease 0s;
-  z-index: 4;
+  z-index: 6 !important;
+  pointer-events: none;
 }
 
 .image-background-hidden {
