--- a/app/scss/modules/animations.scss
+++ b/app/scss/modules/animations.scss
@@ -88,7 +88,7 @@ html body{
   .fixed-window{
     position: absolute;
     left: 0;
-    top: -220px;
+    top: 0;
     background-color: inherit;
     animation: none !important;
     opacity: 1 !important;
