--- a/app/scss/modules/header.scss
+++ b/app/scss/modules/header.scss
@@ -237,6 +237,7 @@
         position: absolute;
         bottom: 0;
         left: 0;
+        z-index: -1;
         background-position: bottom center;
         background-repeat: no-repeat;
         background-size: contain;
