--- a/app/scss/components/products/catalog.scss
+++ b/app/scss/components/products/catalog.scss
@@ -56,6 +56,7 @@
       margin-bottom: 100px;
       position: relative;
       z-index: 1;
+      transition: color 200ms linear;
 
       @include screen('lg', 'max') {
         font-size: 80px;
