--- a/app/scss/components/modal/main.scss
+++ b/app/scss/components/modal/main.scss
@@ -4,7 +4,7 @@
     display: block;
     position: fixed!important;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: rgba(0, 0, 0, 0.26);
     z-index: 99999;
     top: 0;
