--- a/app/scss/components/news/list.scss
+++ b/app/scss/components/news/list.scss
@@ -51,7 +51,7 @@
     .page-title {
       line-height: 90%;
       margin-top: 0;
-      margin-bottom: 0;
+      margin-bottom: 10px;
     }
 
     a {
