--- a/app/scss/components/products/catalog.scss
+++ b/app/scss/components/products/catalog.scss
@@ -13,7 +13,9 @@
     background: #fff!important;
     padding-right: 20px;
     padding-left: 20px;
-
+    @media(max-width: 479px){
+      width: calc(100% + 40px);
+    }
     .text-bottom {
       position: absolute;
       display: block;
@@ -30,6 +32,7 @@
       @include screen('lg', 'max') {
         display: none;
       }
+     
     }
   }
 
@@ -377,6 +380,12 @@
             width: 100%;
             height: auto;
           }
+        }
+        @media(max-width: 850px){
+          display: block;
+          position: relative;
+          max-width: 400px;
+          margin: 30px auto;
         }
       }
       &-mask{
