--- a/app/scss/components/products/product.scss
+++ b/app/scss/components/products/product.scss
@@ -102,6 +102,7 @@
         transition: height 0.3s ease;
         display: flex;
         @include screen('custom-860', 'max') {
+          height: auto;
           padding-top: 50px;
           padding-bottom: 80px;
         }
@@ -214,7 +215,9 @@
             @include screen('950', 'max') {
               font-size: 7px;
             }
-
+            @include screen('custom-860', 'max') {
+              bottom: 0px;
+            }
             @include screen('xs', 'max') {
               bottom: 60px;
               right: -7%;
@@ -339,13 +342,10 @@
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
-            padding-right: 15px;
             margin-bottom: 70px;
-
             @include screen('sm', 'max') {
               flex-basis: 50%;
               margin-bottom: 40px;
-              padding-right: 0px;
             }
 
             .title {
@@ -356,6 +356,7 @@
               font-size: 14px;
               line-height: 21px;
               margin-top: 38px;
+              padding-right: 15px;
             }
           }
         }
