--- a/app/scss/components/recepts/detail.scss
+++ b/app/scss/components/recepts/detail.scss
@@ -105,6 +105,7 @@
           
           @include screen('md', 'max') {
             width: 80%;
+            transform: translateY(20px);
           }
         }
       }
@@ -135,6 +136,9 @@
           display: block;
           z-index: 10;
           content: "";
+          @include screen('xs', 'max') {
+            content: none;
+          }
         }
 
         @include screen('md', 'max') {
