--- a/app/scss/base/ui.scss
+++ b/app/scss/base/ui.scss
@@ -487,6 +487,7 @@
       height: 2px;
       background: #312930;
       top: 50%;
+      transform: translateY(-50%);
       left: 11px;
       transition: width 0.2s;
     }
@@ -504,34 +505,18 @@
     }
 
     span {
-      position: relative;
-      top: -4px;
-      left: -1px;
-      transition: transform 0.3s;
-
-      &::after {
-        position: absolute;
-        content: "";
-        display: block;
-        width: 12px;
-        height: 2px;
-        background: #312930;
-        top: 1px;
-        left: 10px;
-        transform: rotate(50deg) translateY(-50%);
-      }
-
-      &::before {
-        position: absolute;
-        content: "";
-        display: block;
-        width: 12px;
-        height: 2px;
-        background: #312930;
-        top: 9px;
-        left: 11px;
-        transform: rotate(-50deg) translateY(-50%);
-      }
+      position: absolute;
+      display: block;
+      top: 50%;
+      left: 50%;
+      transition: margin 0.3s;
+      width: 12px;
+      height: 12px;
+      border: 2px solid #312930;
+      border-left: 0;
+      border-top: 0;
+      transform: translate(-50%,-50%) rotate(-45deg);
+      margin-left: 5px;
     }
 
     &:hover {
@@ -556,13 +541,8 @@
 
       span {
         position: absolute;
-        top: 41%;
-        transform: translateX(15px);
-
-        &::after,
-        &::before {
-          background: #ffffff;
-        }
+        margin-left: -3px;
+        border-color: white;
       }
     }
   }
