--- a/app/scss/components/modal/main.scss
+++ b/app/scss/components/modal/main.scss
@@ -1,11 +1,19 @@
 .modal {
   display: none;
+  &-bg{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: rgba(0, 0, 0, 0.26);
+  }
   &.active {
     display: block;
     position: fixed!important;
     width: 100%;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.26);
     z-index: 99999;
     top: 0;
     left: 0;
