--- a/app/scss/components/partners/main.scss
+++ b/app/scss/components/partners/main.scss
@@ -316,6 +316,10 @@ section {
   @include screen('xs', 'max') {
     align-items: flex-start;
   }
+  @include screen('md', 'max') {
+    align-items: flex-start;
+    padding-bottom: 30px;
+  }
 
   &-info {
     display: flex;
@@ -348,10 +352,8 @@ section {
   &-row {
     display: flex;
     flex-direction: row;
-    align-items: center;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: flex-start;
     position: relative;
 
     @include screen('xs', 'max') {
@@ -400,10 +402,14 @@ section {
         position: relative;
         bottom: -50px;
         @include screen('md', 'max') {
-          left: 50%;
-          position: absolute;
+          left: 0;
+          bottom: 0;
+          position: relative;
           padding-top: 10px;
           transform-origin: left;
+        }
+        @include screen('xs', 'max'){
+          font-size: 7px;
         }
       }
 
