--- a/app/templates/layouts/default.pug
+++ b/app/templates/layouts/default.pug
@@ -34,6 +34,7 @@ html(lang="ru")
             block content
             include ../modules/footer
         .modal
+            .modal-bg
             .modal-content
                 a#controlModal
                     span
