--- a/app/templates/pages/whereBuy.pug
+++ b/app/templates/pages/whereBuy.pug
@@ -41,39 +41,39 @@ block content
         //- button.whereBuy-geo#setGeoInMap
         //-   +icon('srt-paper-plane','svg')
         .whereBuy-shops
-          .whereBuy-shops-item(data-id="0")
+          .whereBuy-shops-item(data-search="https://www.okmarket.ru")
             img(src="./images/whereBuy/image-shops-1.png", alt="")
             .item-str
               +icon('str_down_orange','svg')
-          .whereBuy-shops-item(data-id="1")
+          .whereBuy-shops-item(data-search="www.metro-cc.ru")
             img(src="./images/whereBuy/image-shops-3.png", alt="")
             .item-str
               +icon('str_down_orange','svg')
-          .whereBuy-shops-item(data-id="2")
+          .whereBuy-shops-item(data-search="www.lenta.com")
             img(src="./images/whereBuy/image-shops-5.png", alt="")
             .item-str
               +icon('str_down_orange','svg')
-          .whereBuy-shops-item(data-id="3")
+          .whereBuy-shops-item(data-search="www.pyaterochka.ru")
             img(src="./images/whereBuy/image-shops-10.png", alt="")
             .item-str
               +icon('str_down_orange','svg')
-          .whereBuy-shops-item(data-id="4")
+          .whereBuy-shops-item(data-search="https://magnit-info.ru/")
             img(src="./images/whereBuy/image-shops-2.png", alt="")
             .item-str
               +icon('str_down_orange','svg')
-          .whereBuy-shops-item(data-id="5")
+          .whereBuy-shops-item(data-search="https://www.auchan.ru")
             img(src="./images/whereBuy/image-shops-6.png", alt="")
             .item-str
               +icon('str_down_orange','svg')
-          .whereBuy-shops-item(data-id="6")
+          .whereBuy-shops-item(data-search="https://dixy.ru")
             img(src="./images/whereBuy/image-shops-7.png", alt="")
             .item-str
               +icon('str_down_orange','svg')
-          .whereBuy-shops-item(data-id="7")
+          .whereBuy-shops-item(data-search="www.perekrestok.ru")
             img(src="./images/whereBuy/image-shops-11.png", alt="")
             .item-str
               +icon('str_down_orange','svg')
-          .whereBuy-shops-item(data-id="8")
+          .whereBuy-shops-item(data-search="https://www.tabris.ru/")
             img(src="./images/whereBuy/image-shops-12.png", alt="")
             .item-str
               +icon('str_down_orange','svg')
