--- a/app/templates/pages/about.pug
+++ b/app/templates/pages/about.pug
@@ -53,6 +53,7 @@ block content
           span люди.
         .about-info-el.smalltext Ведь наш продукт на 80% сделан руками людей, которые многие века перенимали ремесло домашних сыроделов.
   section.main-about-persons
+    canvas.about-persons(width="100%", height="100%")
     .content.visual-animation-base-block
       img(src="./images/about-persons-bg.svg", alt="Персонажи")
   section.main-about-slider
