--- a/app/scss/components/elements/elements.scss
+++ b/app/scss/components/elements/elements.scss
@@ -286,7 +286,7 @@ canvas.about-persons {
   position: absolute;
   top: 50%;
   left: -25px;
-  // transform: scale(0.9)
+  /// transform: scale(0.9)
 }
 
 canvas.how-do-dashed-bg1, canvas.how-do-dashed-bg2, canvas.how-do-dashed-bg3, canvas.how-do-dashed-bg4, canvas.how-do-dashed-bg5 {
