--- a/app/scss/components/products/product.scss
+++ b/app/scss/components/products/product.scss
@@ -371,7 +371,7 @@
             position: absolute;
             content: "";
             display: block;
-            background: url('../images/slider-product-dashed-line.svg');
+            // background: url('../images/slider-product-dashed-line.svg');
             bottom: 40%;
             left: -100%;
             width: 100vw;
