--- a/app/scss/components/recepts/detail.scss
+++ b/app/scss/components/recepts/detail.scss
@@ -15,7 +15,7 @@
       position: absolute;
       content: "";
       display: block;
-      background: url('../images/promo-box-bottom-dashed.svg');
+      // background: url('../images/promo-box-bottom-dashed.svg');
       top: 32%;
       left: -19%;
       width: 1749px;
