--- a/app/templates/pages/product.pug
+++ b/app/templates/pages/product.pug
@@ -70,6 +70,7 @@ block content
                     .product-bullets-thumb.swiper-slide
                       .thumb-wrapper
                         img(src="./images/product-slider-1.jpg")
+              canvas.product-slider-dashed
           .product-desc-row.left-product-mg.visual-animation-base-block
             .product-desc-row-el
               .title формовка:
