--- a/app/templates/pages/recept_detail.pug
+++ b/app/templates/pages/recept_detail.pug
@@ -12,6 +12,7 @@ block variables
 block content
   +header()
   section.main-recept.waveSection-bottom(data-color="#f6f5f3").bg-additional
+    canvas.recept-details-dashed(width="100%", height="100%")
     .content.main-recept-box
       .pagination
         a.pagination-back.white(href="./recept_list.html") Рецепты
@@ -108,7 +109,7 @@ block content
               .product-title Сыр «Косичка» «Гиагинский» копченый
               .product-print
                 +icon('recept-product-print', 'svg').scrollRotate
-  +recepts(2).bg-white
+  +recepts(2)
   +wherebuy().bg-white.receptbuy
   +subscriptionForm().bg-white
   +footer().bg-white
